--- a/src/template.html
+++ b/src/template.html
@@ -18,7 +18,7 @@
         <option value="uk">uk</option>
         <option value="base">base</option>
       </select>
-      <button id="search-btn">Search</button>
+      <button id="searchBtn">Search</button>
 
     </div>
   </header>
@@ -28,38 +28,38 @@
         <div class="square-left">
           <div class="square-left-inner">
             <div class="title-s bold-2">Wind</div>
-            <div><span class="text-2a bold-1" id="current-wind-speed"></span><span class="square-unit"
-                id="current-wind-speed-unit">mph</span></div>
+            <div><span class="text-2a bold-1 current" id="windspeed"></span><span class="square-unit"
+                id="windspeedUnit">mph</span></div>
             <div id="wind-data">
-              <span class="bold-1" id="current-wind-scale"></span><br>
+              <span class="bold-1" id="windscale"></span><br>
               <span>From</span><br>
-              <span class="bold-1" id="current-wind-dir"></span>
+              <span class="bold-1 current" id="winddir"></span>
             </div>
           </div>
         </div>
         <div class="square-right"></div>
       </div>
       <div class="div2">
-        <div class="weather-icon"><img id="current-icon"></div>
+        <div class="weather-icon"><img id="icon" class="" current></div>
         <div class=" current-data">
-          <div class="current-conditions bold-1" id="current-conditions"></div>
+          <div class="current-conditions bold-1 current" id="conditions"></div>
           <div class="current-temps">
-            <div id="temp">
+            <div id="temps">
               <div>Temperature</div>
-              <div class="current-temp text-l1 bold-3" id="current-temp"></div>
+              <div class="current-temp text-l1 bold-3 current" id="temp"></div>
             </div>
-            <div id="feelslike">
+            <div>
               <div>Feels like</div>
-              <div class="current-temp text-l1 bold-3" id="current-feelslike"></div>
+              <div class="current-temp text-l1 bold-3 current" id="feelslike"></div>
             </div>
           </div>
         </div>
         <div class="alerts" id="current-alerts"></div>
-        <div class="current-location bold-3 text-l6" id="current-location"></div>
+        <div class="current-location bold-3 text-l6" id="location"></div>
       </div>
       <div class="div3">
         <div class="buttons-right">
-          <button id="tomorrow-btn">Tomorrow</button><button id="weekly-btn">Weekly</button>
+          <button id="tomorrowBtn">Tomorrow</button><button id="weeklyBtn">Weekly</button>
         </div>
         <div class=" forecast" id="forecast">
 
@@ -70,8 +70,8 @@
         <div class="rectangle-top">
           <div class="rectangle-left">
             <div class="buttons">
-              <button id="hourly-btn">Hourly</button><button id="wind-btn">Wind</button><button
-                id="precip-btn">Precipitation</button>
+              <button id="hourlyBtn">Hourly</button><button id="windBtn">Wind</button><button
+                id="precipBtn">Precipitation</button>
             </div>
             <div class="daymax">
               <span class="title-s">Day Max</span><span><span class="text-l4 bold-3" id="day-max"></span><span
@@ -80,10 +80,10 @@
           </div>
 
           <div class="rectangle-right">
-            <div id="current-description"></div>
+            <div id="description"></div>
           </div>
         </div>
-        <div class="rectangle-bottom" id="hourly-cards-container">
+        <div class="rectangle-bottom" id="hourlyCardsContainer">
           <div class="scrollbar" id="style-2"></div>
         </div>
 
@@ -94,11 +94,11 @@
         <div class="square-left ">
           <div class="square-left-inner">
             <div class="title-s bold-2">Humidity</div>
-            <div><span class="text-2a bold-1" id="current-humidity"></span><span>%</span></div>
+            <div><span class="current text-2a bold-1" id="humidity"></span><span>%</span></div>
             <div>
               <span class="bold-1">Moderate</span><br>
               <span>Dewpoint</span><br>
-              <span class="bold-1" id="current-dewpoint"></span><span id="current-dewpoint-unit"></span>
+              <span class="bold-1 current" id="dew"></span><span id="dewUnit"></span>
             </div>
           </div>
         </div>
@@ -108,7 +108,7 @@
         <div class="square-left ">
           <div class="square-left-inner">
             <div class="title-s bold-2">Air Quality</div>
-            <div><span class="text-2a bold-1" id="current-air-quality"></span></div>
+            <div><span class="text-2a bold-1 current" id="aqius"></span></div>
             <div>
               <span class="bold-1" id="current-air-quality-scale"></span>
             </div>
@@ -120,12 +120,12 @@
         <div class="square-left">
           <div class="square-left-inner">
             <div class="title-s bold-2">Precipitation</div>
-            <div><span class="text-2a bold-1" id="current-precipitation"></span><span class="square-unit"
+            <div><span class="text-2a bold-1 current" id="precip"></span><span class="square-unit"
                 id="current-precipitation-unit"></span></div>
             <div>
-              <span class="bold-1" id="current-precip-intensity"></span><br>
+              <span class="bold-1" id="precipintensity"></span><br>
               <span>Probability</span><br>
-              <span class="bold-1" id="current-precip-prob"></span><span>%</span>
+              <span class="bold-1 current" id="precipprob"></span><span>%</span>
             </div>
           </div>
         </div>
@@ -135,7 +135,7 @@
         <div class="square-left ">
           <div class=" square-left-inner">
             <div class="title-s bold-2">Pressure</div>
-            <div><span class="text-2a bold-1" id="current-pressure"></span></div>
+            <div><span class="text-2a bold-1 current" id="pressure"></span></div>
             <div>
               <span class="bold-1">hPa</span><br>
               <span id="current-pressure-desc"></span>
@@ -148,7 +148,7 @@
         <div class="square-left">
           <div class="square-left-inner">
             <div class="title-s bold-2">UV Index</div>
-            <div><span class="text-2a bold-1" id="current-uv-index"></span></div>
+            <div><span class="text-2a bold-1 current" id="uvindex"></span></div>
             <div>
               <span class="bold-1" id="current-uv-scale"></span>
             </div>
@@ -161,15 +161,15 @@
           <div class=" square-left-inner">
             <div>
               <div class="title-s bold-2">Sunrise</div>
-              <div><span class="text-2a bold-1" id="sunrise"></span></div>
+              <div><span class="text-2a bold-1 current" id="sunrise"></span></div>
             </div>
             <div>
               <div class="title-s bold-2">Sunset</div>
-              <div><span class="text-2a bold-1" id="sunset"></span></div>
+              <div><span class="text-2a bold-1 current" id="sunset"></span></div>
             </div>
             <div>
               <div class="title-s bold-2">Moon Phase</div>
-              <div><span id="current-moon-phase"></span></div>
+              <div><span class="current" id="moonphase"></span></div>
             </div>
           </div>
         </div>
@@ -179,7 +179,7 @@
         <div class="square-left ">
           <div class="square-left-inner">
             <div class="title-s bold-2">Visibility</div>
-            <div><span class="text-2a bold-1" id="current-visibility"> </span><span id="current-visibility-unit"
+            <div><span class="text-2a bold-1 current" id="visibility"> </span><span id="current-visibility-unit"
                 class="square-unit"></span></div>
             <div>
               <span class="bold-1" id="current-visibility-scale"></span>
