feat: add wind direction icon

--- a/src/template.html
+++ b/src/template.html
@@ -29,7 +29,7 @@
           <div class="square-left-inner">
             <div class="title-s bold-2">Wind</div>
             <div><span class="text-2a bold-1 current" id="windspeed"></span><span class="square-unit"
-                id="windspeedUnit">mph</span></div>
+                id="windspeedUnit"></span></div>
             <div id="wind-data">
               <span class="bold-1" id="windscale"></span><br>
               <span>From</span><br>
@@ -37,7 +37,9 @@
             </div>
           </div>
         </div>
-        <div class="square-right"></div>
+        <div class="square-right">
+          <img id="windIcon">
+        </div>
       </div>
       <div class="div2">
         <div class="weather-icon"><img id="icon" class="" current></div>
