feat: streamline hourly and weekly forecast event listeners

--- a/src/template.html
+++ b/src/template.html
@@ -60,7 +60,7 @@
         <div class="current-location bold-3 text-l6" id="location"></div>
       </div>
       <div class="div3">
-        <div class="buttons-right">
+        <div class="buttons-right" id="forecastBtns">
           <button id="tomorrowBtn">Tomorrow</button><button id="weeklyBtn">Weekly</button>
         </div>
         <div class=" forecast" id="forecast">
@@ -71,7 +71,7 @@
       <div class="div4">
         <div class="rectangle-top">
           <div class="rectangle-left">
-            <div class="buttons">
+            <div class="hourlyWeatherBtns">
               <button id="hourlyBtn">Hourly</button><button id="windBtn">Wind</button><button
                 id="precipBtn">Precipitation</button>
             </div>
