feat: add day max values for wind and precip

--- a/src/template.html
+++ b/src/template.html
@@ -10,9 +10,9 @@
 
 <body>
   <header>
-    <div class="input-section">
+    <div class="input-section" id="inputSection">
       <input type="text" id="current-location">
-      <select id="unit-group">
+      <select id="unitInput">
         <option value="metric">metric</option>
         <option value="us">us</option>
         <option value="uk">uk</option>
