fix: tidy files

--- a/src/template.html
+++ b/src/template.html
@@ -62,7 +62,7 @@
             </div>
           </div>
         </div>
-        <div class="alerts" id="current-alerts"></div>
+        <div class="alerts" id="alerts"></div>
         <div class="current-location bold-3 text-l6" id="location"></div>
       </div>
       <div class="div3">
@@ -83,7 +83,7 @@
             </div>
             <div class="daymax">
               <span class="title-s">Day Max</span>
-              <span class="text-l4 bold-3" id="day-max"></span>
+              <span class="text-l4 bold-3" id="maxtemp"></span>
               <span class="maxValue">
                 <span class="text-l4 bold-3 hidden" id="maxWindspeed"></span><span class="speedUnit hidden"
                   id="maxWindspeedUnit"></span></span>
@@ -125,7 +125,7 @@
             <div class="title-s bold-2">Air Quality</div>
             <div><span class="text-2a bold-1 current" id="aqius"></span></div>
             <div>
-              <span class="bold-1" id="current-air-quality-scale"></span>
+              <span class="bold-1" id="airqualityscale"></span>
             </div>
           </div>
         </div>
@@ -153,7 +153,7 @@
             <div><span class="text-2a bold-1 current" id="pressure"></span></div>
             <div>
               <span class="bold-1">hPa</span><br>
-              <span id="current-pressure-desc"></span>
+              <span id="pressurescale"></span>
             </div>
           </div>
         </div>
@@ -165,7 +165,7 @@
             <div class="title-s bold-2">UV Index</div>
             <div><span class="text-2a bold-1 current" id="uvindex"></span></div>
             <div>
-              <span class="bold-1" id="current-uv-scale"></span>
+              <span class="bold-1" id="uvscale"></span>
             </div>
           </div>
         </div>
@@ -197,7 +197,7 @@
             <div><span class="text-2a bold-1 current" id="visibility"> </span><span id="current-visibility-unit"
                 class="square-unit distUnit"></span></div>
             <div>
-              <span class="bold-1" id="current-visibility-scale"></span>
+              <span class="bold-1" id="visibilityscale"></span>
             </div>
           </div>
         </div>
