fix: add current location

--- a/src/template.html
+++ b/src/template.html
@@ -28,8 +28,8 @@
         <div class="square-left">
           <div class="square-left-inner">
             <div class="title-s bold-2">Wind</div>
-            <div><span class="text-2a bold-1 current" id="windspeed"></span><span class="square-unit"
-                id="windspeedUnit"></span></div>
+            <div><span class="text-2a bold-1 current" id="windspeed"></span><span class="square-unit speedUnit"></span>
+            </div>
             <div id="wind-data">
               <span class="bold-1" id="windscale"></span><br>
               <span>From</span><br>
@@ -63,13 +63,13 @@
           </div>
         </div>
         <div class="alerts" id="alerts"></div>
-        <div class="current-location bold-3 text-l6" id="location"></div>
+        <div class="current-location bold-3 text-l6 current" id="currentLocation"></div>
       </div>
       <div class="div3">
         <div class="buttons-right" id="forecastBtns">
           <button id="tomorrowBtn">Tomorrow</button><button id="weeklyBtn">Weekly</button>
         </div>
-        <div class=" forecast" id="forecast">
+        <div class="forecast" id="forecast">
 
 
         </div>
@@ -105,7 +105,7 @@
       </div>
 
 
-      <div class="square  div5">
+      <div class="square div5">
         <div class="square-left ">
           <div class="square-left-inner">
             <div class="title-s bold-2">Humidity</div>
@@ -119,7 +119,7 @@
         </div>
         <div class="square-right "></div>
       </div>
-      <div class="square  div6">
+      <div class="square div6">
         <div class="square-left ">
           <div class="square-left-inner">
             <div class="title-s bold-2">Air Quality</div>
@@ -146,7 +146,7 @@
         </div>
         <div class="square-right "></div>
       </div>
-      <div class="square  div8">
+      <div class="square div8">
         <div class="square-left ">
           <div class=" square-left-inner">
             <div class="title-s bold-2">Pressure</div>
@@ -159,7 +159,7 @@
         </div>
         <div class="square-right "></div>
       </div>
-      <div class="square  div9">
+      <div class="square div9">
         <div class="square-left">
           <div class="square-left-inner">
             <div class="title-s bold-2">UV Index</div>
@@ -171,7 +171,7 @@
         </div>
         <div class="square-right "></div>
       </div>
-      <div class="square  div10">
+      <div class="square div10">
         <div class="square-left ">
           <div class=" square-left-inner">
             <div>
@@ -190,7 +190,7 @@
         </div>
         <div class="square-right"></div>
       </div>
-      <div class="square  div11">
+      <div class="square div11">
         <div class="square-left ">
           <div class="square-left-inner">
             <div class="title-s bold-2">Visibility</div>
