--- a/src/template.html
+++ b/src/template.html
@@ -11,7 +11,7 @@
 <body>
   <header>
     <div class="input-section" id="inputSection">
-      <input type="text" id="current-location">
+      <input type="text" id="currentLocation">
       <select id="unitInput">
         <option value="metric">metric</option>
         <option value="us">us</option>
@@ -24,39 +24,23 @@
   </header>
   <main>
     <div class="parent">
-      <div class="square div1">
-        <div class="square-left">
-          <div class="square-left-inner">
-            <div class="title-s bold-2">Wind</div>
-            <div><span class="text-2a bold-1 current" id="windspeed"></span><span class="square-unit speedUnit"></span>
-            </div>
-            <div id="wind-data">
-              <span class="bold-1" id="windscale"></span><br>
-              <span>From</span><br>
-              <span class="bold-1 current" id="winddir"></span>
-            </div>
-          </div>
-        </div>
-        <div class="square-right">
-          <img id="windIcon">
-        </div>
-      </div>
-      <div class="div2">
-        <div class="weather-icon"><img id="icon" class="" current></div>
+
+      <div class="div1">
+        <div class="weather-icon"><img id="icon" class="current"></div>
         <div class=" current-data">
-          <div class="current-conditions bold-1 current" id="conditions"></div>
+          <div class="current-conditions currentUnchanged current" id="conditions"></div>
           <div class="current-temps">
             <div id="temps">
               <div>Temperature</div>
               <div class="current-temp-1">
-                <div class="current-temp text-l1 bold-3 current" id="temp"></div>
+                <div class="current-temp text-l1 bold-3 current currentUnchanged" id="temp"></div>
                 <div class="tempUnit text-l1 bold-3"></div>
               </div>
             </div>
             <div>
               <div>Feels like</div>
               <div class="current-temp-1">
-                <div class="current-temp text-l1 bold-3 current" id="feelslike"></div>
+                <div class="current-temp text-l1 bold-3 current currentUnchanged" id="feelslike"></div>
                 <div class="tempUnit text-l1 bold-3"></div>
               </div>
             </div>
@@ -74,7 +58,7 @@
 
         </div>
       </div>
-      <div class="div4">
+      <div class="div2">
         <div class="rectangle-top">
           <div class="rectangle-left">
             <div class="hourlyWeatherBtns">
@@ -83,19 +67,17 @@
             </div>
             <div class="daymax">
               <span class="title-s">Day Max</span>
-              <span class="text-l4 bold-3" id="maxtemp"></span>
+              <span class="text-l4 bold-3 current" id="tempmax"></span>
               <span class="maxValue">
-                <span class="text-l4 bold-3 hidden" id="maxWindspeed"></span><span class="speedUnit hidden"
-                  id="maxWindspeedUnit"></span></span>
-
-
-              <span class="maxValue"><span class="text-l4 bold-3 hidden" id="maxPrecip"></span><span
+                <span class="text-l4 bold-3 hidden current currentUnchanged" id="windspeedmax"></span><span
+                  class="speedUnit hidden" id="maxWindspeedUnit"></span></span>
+              <span class="maxValue"><span class="text-l4 bold-3 hidden" id="precipmax"></span><span
                   class="precipUnit hidden" id="maxPrecipUnit"></span></span>
             </div>
           </div>
 
           <div class="rectangle-right">
-            <div id="description"></div>
+            <div id="description" class="currentUnchanged"></div>
           </div>
         </div>
         <div class="rectangle-bottom" id="hourlyCardsContainer">
@@ -104,16 +86,34 @@
 
       </div>
 
-
+      <div class="square div4">
+        <div class="square-left">
+          <div class="square-left-inner">
+            <div class="square-heading">Wind</div>
+            <div><span class="text-2a bold-1 current currentUnchanged" id="windspeed"></span><span
+                class="square-unit speedUnit"></span>
+            </div>
+            <div id="wind-data">
+              <span class="bold-1" id="windscale"></span><br>
+              <span>From</span><br>
+              <span class="bold-1 current" id="winddir"></span>
+            </div>
+          </div>
+        </div>
+        <div class="square-right">
+          <img id="windIcon">
+        </div>
+      </div>
       <div class="square div5">
         <div class="square-left ">
           <div class="square-left-inner">
-            <div class="title-s bold-2">Humidity</div>
-            <div><span class="current text-2a bold-1" id="humidity"></span><span>%</span></div>
+            <div class="square-heading">Humidity</div>
+            <div><span class="current currentUnchanged text-2a bold-1" id="humidity"></span><span>%</span></div>
             <div>
               <span class="bold-1">Moderate</span><br>
               <span>Dewpoint</span><br>
-              <span class="bold-1 current" id="dew"></span><span id="dewUnit" class="bold-1 tempUnit"></span>
+              <span class="bold-1 current currentUnchanged" id="dew"></span><span id="dewUnit"
+                class="bold-1 tempUnit"></span>
             </div>
           </div>
         </div>
@@ -122,8 +122,8 @@
       <div class="square div6">
         <div class="square-left ">
           <div class="square-left-inner">
-            <div class="title-s bold-2">Air Quality</div>
-            <div><span class="text-2a bold-1 current" id="aqius"></span></div>
+            <div class="square-heading">Air Quality</div>
+            <div><span class="text-2a bold-1 current currentUnchanged" id="aqius"></span></div>
             <div>
               <span class="bold-1" id="airqualityscale"></span>
             </div>
@@ -134,13 +134,13 @@
       <div class="square div7">
         <div class="square-left">
           <div class="square-left-inner">
-            <div class="title-s bold-2">Precipitation</div>
-            <div><span class="text-2a bold-1 current" id="precip"></span><span class="square-unit precipUnit"
-                id="current-precipitation-unit"></span></div>
+            <div class="square-heading">Precipitation</div>
+            <div><span class="text-2a bold-1 current currentUnchanged" id="precip"></span><span
+                class="square-unit precipUnit" id="current-precipitation-unit"></span></div>
             <div>
               <span class="bold-1" id="precipintensity"></span><br>
               <span>Probability</span><br>
-              <span class="bold-1 current" id="precipprob"></span><span>%</span>
+              <span class="bold-1 current currentUnchanged" id="precipprob"></span><span>%</span>
             </div>
           </div>
         </div>
@@ -149,8 +149,8 @@
       <div class="square div8">
         <div class="square-left ">
           <div class=" square-left-inner">
-            <div class="title-s bold-2">Pressure</div>
-            <div><span class="text-2a bold-1 current" id="pressure"></span></div>
+            <div class="square-heading">Pressure</div>
+            <div><span class="text-2a bold-1 current currentUnchanged" id="pressure"></span></div>
             <div>
               <span class="bold-1">hPa</span><br>
               <span id="pressurescale"></span>
@@ -162,8 +162,8 @@
       <div class="square div9">
         <div class="square-left">
           <div class="square-left-inner">
-            <div class="title-s bold-2">UV Index</div>
-            <div><span class="text-2a bold-1 current" id="uvindex"></span></div>
+            <div class="square-heading">UV Index</div>
+            <div><span class="text-2a bold-1 current currentUnchanged" id="uvindex"></span></div>
             <div>
               <span class="bold-1" id="uvscale"></span>
             </div>
@@ -175,15 +175,15 @@
         <div class="square-left ">
           <div class=" square-left-inner">
             <div>
-              <div class="title-s bold-2">Sunrise</div>
+              <div class="square-heading">Sunrise</div>
               <div><span class="text-2a bold-1 current" id="sunrise"></span></div>
             </div>
             <div>
-              <div class="title-s bold-2">Sunset</div>
+              <div class="square-heading">Sunset</div>
               <div><span class="text-2a bold-1 current" id="sunset"></span></div>
             </div>
             <div>
-              <div class="title-s bold-2">Moon Phase</div>
+              <div class="square-heading">Moon Phase</div>
               <div><span class="current" id="moonphase"></span></div>
             </div>
           </div>
@@ -193,9 +193,9 @@
       <div class="square div11">
         <div class="square-left ">
           <div class="square-left-inner">
-            <div class="title-s bold-2">Visibility</div>
-            <div><span class="text-2a bold-1 current" id="visibility"> </span><span id="current-visibility-unit"
-                class="square-unit distUnit"></span></div>
+            <div class="square-heading">Visibility</div>
+            <div><span class="text-2a bold-1 current currentUnchanged" id="visibility"> </span><span
+                id="current-visibility-unit" class="square-unit distUnit"></span></div>
             <div>
               <span class="bold-1" id="visibilityscale"></span>
             </div>
