fix: return correctly formatted times for sunrise and sunset

--- a/src/template.html
+++ b/src/template.html
@@ -138,8 +138,8 @@
             <div><span class="text-2a bold-1 current currentUnchanged" id="precip"></span><span
                 class="square-unit precipUnit" id="current-precipitation-unit"></span></div>
             <div>
-              <span class="bold-1" id="precipintensity"></span><br>
-              <span>Probability</span><br>
+              <span class="bold-1" id="precipintensity"></span>
+              <span>Probability</span>
               <span class="bold-1 current currentUnchanged" id="precipprob"></span><span>%</span>
             </div>
           </div>
@@ -176,11 +176,11 @@
           <div class=" square-left-inner">
             <div>
               <div class="square-heading">Sunrise</div>
-              <div><span class="text-2a bold-1 current" id="sunrise"></span></div>
+              <div><span class="text-2a bold-1 current currentUnchanged" id="sunrise"></span></div>
             </div>
             <div>
               <div class="square-heading">Sunset</div>
-              <div><span class="text-2a bold-1 current" id="sunset"></span></div>
+              <div><span class="text-2a bold-1 current currentUnchanged" id="sunset"></span></div>
             </div>
             <div>
               <div class="square-heading">Moon Phase</div>
